# watchdog

./: Dockerfile  kustomization.yaml  main.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yaml
.kubernetes/: deployment.yaml
watchdog/: utils.py
watchdog/core/: __init__.py  executor.py  settings.py
watchdog/handlers/: __init__.py  base.py  message_discord.py  message_telegram.py
watchdog/triggers/: __init__.py  base.py  late_runs.py  prefect_agents.py  vpn.py
