[tool.poetry]
name = "watchdog"
version = "0.1.0"
description = "Watchdog implementation for our infrastructure."
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/prefeitura-rio/watchdog"
repository = "https://github.com/prefeitura-rio/watchdog"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.18.1"
flake8 = "^4.0.1"

[tool.poetry.scripts]
lint = "scripts.lint:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
